--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
     "short_name": "Twittor",
-    "name": "Twiter para heroes",
+    "name": "Twittor para héroes",
     "start_url": "index.html",
     "background_color": "#3498db",
+    "theme_color": "#3498db",
     "display": "standalone",
     "orientation": "portrait",
-    "theme_color": "#3498db",
     "icons": [
         {
             "src": "img/icons/icon-72x72.png",
@@ -48,4 +48,6 @@
             "sizes": "512x512"
         }
       ]
+
+
 }
